# StanfordPhilosophyViz

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: hello.py  play.ipynb
