[project]
name = "patsorestanfordphilosophy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.10",
    "bs4>=0.0.2",
    "emblaze>=0.10.6",
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "langchain-huggingface>=0.1.2",
    "langchain>=0.3.11",
    "lxml>=5.3.0",
    "qdrant-client>=1.12.1",
    "rich>=13.9.4",
    "sentence-transformers>=3.3.1",
]
